<resources>
    <string name="SL">Sharing Location</string>
    <string name="TM">Types of malfunctions</string>
    <string name="AL">Allow Location</string>
    <string name="app_name">Easydrive</string>
    <string name="textView1">My App- Main Menu</string>
    <string name="Sv">Scan vehicle warning light</string>
    <string name="buttonOption1">Option1</string>
    <string name="buttonOption2">Option2</string>
    <string name="LV">Get your location</string>
    <string name="LR">Live requests for help</string>
    <string name="buttonOption3">Option3</string>
    <string name="buttonOption4">Option4 </string>
    <string name="buttonOption5">Option5</string>
    <string name="buttonOption6">Option6</string>
    <string name="buttonOption7">Option7</string>
    <string name="buttonOption8">Option8</string>
    <string name="buttonOption9">Option9</string>
    <string name="buttonOption10">Option10 </string>
    <string name="Login">Login </string>
    <string name="Reset">Reset </string>
    <string name="Gotoregiester">Do not have a user yet? Sign up now </string>
    <string name="SignUpPage">Sign Up </string>
    <string name="SignInPage">Sign In </string>
    <string name="JoinED"> Join EasyDrive</string>
    <string name="Email"> Email address:</string>
    <string name="UserName"> Username:</string>
    <string name="QA"> Questions and Answers:</string>
    <string name="AlertLights"> Warning lights</string>
    <string name="Settings"> Settings</string>
    <string name="AllowLocation"> Allow Location</string>
    <string name="Settingsandpermissions"> Settings and Permissions</string>
    <string name="Gasstationsorgarage"> garage stations  </string>
    <string name="Commonmalfunctions"> Common malfunctions </string>
    <string name="Tp"> Types of malfunctions </string>


    <string name="Password"> password:</string>
    <string name="ConfirmPassword"> Confirm password:</string>
    <string name="PhoneNumber"> Phone Number:</string>
    <string name="title_activity_maps1">Map</string>
    <string name="title_activity_web">WebActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps2">Map</string>
</resources>