<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Loginbtn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".SignIn">

    <Button
        android:id="@+id/reset"
        android:layout_width="127dp"
        android:layout_height="82dp"
        android:onClick="resetbtn"
        android:text="@string/Reset"
        app:layout_constraintBottom_toBottomOf="@+id/loginbtn"
        app:layout_constraintStart_toEndOf="@+id/loginbtn"
        app:layout_constraintTop_toTopOf="@+id/loginbtn" />

    <EditText
        android:id="@+id/PersonName"
        android:layout_width="275dp"
        android:layout_height="97dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/UserName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/signinp"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toStartOf="@+id/signinp"
        app:layout_constraintTop_toBottomOf="@+id/signinp" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="266dp"
        android:layout_height="83dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/PersonName"
        app:layout_constraintStart_toStartOf="@+id/PersonName"
        app:layout_constraintTop_toBottomOf="@+id/PersonName" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="127dp"
        android:layout_height="82dp"
        android:layout_marginTop="16dp"
        android:onClick="gotomainpage"
        android:text="@string/Login"
        app:layout_constraintEnd_toEndOf="@+id/Password"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="@+id/Password"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <Button
        android:id="@+id/Gotoregiesterbtn"
        android:layout_width="219dp"
        android:layout_height="56dp"
        android:layout_marginBottom="58dp"
        android:onClick="gotosignUp"
        android:text="@string/Gotoregiester"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/signinp"
        android:layout_width="132dp"
        android:layout_height="74dp"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="@string/SignInPage"
        android:textColor="#F44336"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>