<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="gotoQA"
    tools:context=".ActivityOption2">


    <Button
        android:id="@+id/button5"
        android:layout_width="143dp"
        android:layout_height="96dp"
        android:layout_marginTop="112dp"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="143dp"
        android:layout_height="96dp"
        android:layout_marginTop="116dp"
        android:onClick="gotoQA"
        android:text="@string/QA"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button3"
        android:layout_width="143dp"
        android:layout_height="96dp"
        android:layout_marginStart="32dp"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/button5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="258dp"
        android:layout_height="83dp"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/Tp"
        android:textColor="#F44336"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="143dp"
        android:layout_height="96dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="116dp"
        android:onClick="gotoCM"
        android:text="@string/Commonmalfunctions"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
</androidx.constraintlayout.widget.ConstraintLayout>